--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,9 +46,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\MovingCamera.cs" />
-     <Compile Include="Assets\Script\PlayerController.cs" />
-     <Compile Include="Assets\Script\RotateAllObjects.cs" />
+     <Compile Include="Assets\Script\C#\MovingCamera.cs" />
+     <Compile Include="Assets\Script\C#\PlayerController.cs" />
+     <Compile Include="Assets\Script\C#\RotateAllObjects.cs" />
      <None Include="Assets\Shader\Outlined_Diffuse.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>F:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
