--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,8 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Script\C#\MoleculeController.cs" />
      <Compile Include="Assets\Script\C#\MovingCamera.cs" />
-     <Compile Include="Assets\Script\C#\PlayerController.cs" />
      <Compile Include="Assets\Script\C#\RotateAllObjects.cs" />
      <None Include="Assets\Shader\Outlined_Diffuse.shader" />
  <Reference Include="UnityEngine.UI">
