--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,8 +45,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Script\C#\FlyingCamera.cs" />
      <Compile Include="Assets\Script\C#\MoleculeController.cs" />
      <Compile Include="Assets\Script\C#\MovingCamera.cs" />
+     <Compile Include="Assets\Script\C#\SimpleSmoothMouseLook.cs" />
      <None Include="Assets\Shader\Outlined_Diffuse.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
